feat: add read data

--- a/report.ipynb
+++ b/report.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "426d0ecb",
    "metadata": {},
    "outputs": [],
@@ -51,6 +51,8 @@
     "import requests\n",
     "import xgboost as xgb\n",
     "from xgboost import XGBClassifier\n",
+    "import json\n",
+    "\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -66,11 +68,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "69193eb6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️ Error parseando línea: Expecting ',' delimiter: line 1 column 4314 (char 4313)\n",
+      "Línea problemática: {\"id\": 1711127305131631071, \"id_str\": \"1711127305131631071\", \"url\": \"https://x.com/nquevedoa/status/1711127305131631071\", \"date\": \"2023-10-08 21:11:55+00:00\", \"user\": {\"id\": 204996481, \"id_str\": \"2049 ...\n",
+      "Se cargaron 5604 tweets\n"
+     ]
+    }
+   ],
+   "source": [
+    "tweets = []\n",
+    "\n",
+    "with open(\"data/traficogt.txt\", \"r\", encoding=\"utf-16\") as f:\n",
+    "    for line in f:\n",
+    "        line = line.strip()\n",
+    "        if not line:\n",
+    "            continue\n",
+    "        try:\n",
+    "            tweet = json.loads(line)\n",
+    "            tweets.append(tweet)\n",
+    "        except json.JSONDecodeError as e:\n",
+    "            print(\"⚠️ Error parseando línea:\", e)\n",
+    "            print(\"Línea problemática:\", line[:200], \"...\")\n",
+    "            continue\n",
+    "\n",
+    "print(f\"Se cargaron {len(tweets)} tweets\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9940e990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⚠️ No se encontró ningún retweet\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_rt = None\n",
+    "for i, tweet in enumerate(tweets):\n",
+    "    if tweet.get(\"retweetedTweet\") is not None:\n",
+    "        first_rt = (i, tweet)\n",
+    "        break\n",
+    "\n",
+    "if first_rt:\n",
+    "    idx, tw = first_rt\n",
+    "    print(f\"El primer retweet está en tweets[{idx}]\")\n",
+    "    print(\"ID:\", tw[\"id\"])\n",
+    "    print(\"Usuario:\", tw[\"user\"][\"username\"])\n",
+    "    print(\"Texto:\", tw[\"rawContent\"])\n",
+    "else:\n",
+    "    print(\"No se encontró ningún retweet\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "197de489",
+   "metadata": {},
+   "source": [
+    "### Para llevarnos\n",
+    "\n",
+    "# user\n",
+    "* Username\n",
+    "* id_str\n",
+    "* followersCount\n",
+    "* friendsCount\n",
+    "* mediaCount\n",
+    "* verified\n",
+    "# rawContent\n",
+    "# likeCount\n",
+    "# quoteCount\n",
+    "# hashtags\n",
+    "# cashtags\n",
+    "# mentionedUsers\n",
+    "# viewCount\n",
+    "# retweetedTweet\n",
+    "# quotedTweet -> id\n",
+    "\n",
+    "\n",
+    "---\n",
+    "# quotedTweet\n",
+    "# user\n",
+    "* Username\n",
+    "* id_str\n",
+    "* followersCount\n",
+    "* friendsCount\n",
+    "* mediaCount\n",
+    "* verified\n",
+    "# rawContent\n",
+    "# likeCount\n",
+    "# quoteCount\n",
+    "# hashtags\n",
+    "# cashtags\n",
+    "# mentionedUsers\n",
+    "# viewCount\n",
+    "# retweetedTweet\n",
+    "# quotedTweet"
+   ]
   }
  ],
  "metadata": {
@@ -80,7 +185,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
