chore: clean code

--- a/report.ipynb
+++ b/report.ipynb
@@ -103,7 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "id": "00619495",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 783345301256073216, 'id_str': '783345301256073216', 'username': 'CC_Guatemala', 'displayname': 'CC Guatemala', '_type': 'snscrape.modules.twitter.UserRef'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tweets[1][\"mentionedUsers\"])  # Mostrar las claves del primer tweet para entender su estructura"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "9940e990",
    "metadata": {},
    "outputs": [
@@ -111,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚠️ No se encontró ningún retweet\n"
+      "No se encontró ningún retweet\n"
      ]
     }
    ],
@@ -131,6 +149,73 @@
     "else:\n",
     "    print(\"No se encontró ningún retweet\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6dc4e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El primer retweet está en tweets[1]\n",
+      "ID: 1834029142565658846\n",
+      "Usuario: monymmorales\n",
+      "Texto: La corrupción de la @CC_Guatemala\n",
+      "es descarada, falsificación de documentos y obligaron a extenderles DPI.\n",
+      "https://t.co/0J24ZCXJ2c\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_rt = None\n",
+    "for i, tweet in enumerate(tweets):\n",
+    "    if len(tweet.get(\"mentionedUsers\", [])) > 0:\n",
+    "        first_rt = (i, tweet)\n",
+    "        break\n",
+    "\n",
+    "if first_rt:\n",
+    "    idx, tw = first_rt\n",
+    "    print(f\"El primer retweet está en tweets[{idx}]\")\n",
+    "    print(\"ID:\", tw[\"id\"])\n",
+    "    print(\"Usuario:\", tw[\"user\"][\"username\"])\n",
+    "    print(\"Texto:\", tw[\"rawContent\"])\n",
+    "else:\n",
+    "    print(\"No se encontró ningún retweet\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45a3c299",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_rt = None\n",
+    "for i, tweet in enumerate(tweets):\n",
+    "    if tweet.get(\"retweetedTweet\") is not None:\n",
+    "        first_rt = (i, tweet)\n",
+    "        break\n",
+    "\n",
+    "if first_rt:\n",
+    "    idx, tw = first_rt\n",
+    "    print(f\"El primer retweet está en tweets[{idx}]\")\n",
+    "    print(\"ID:\", tw[\"id\"])\n",
+    "    print(\"Usuario:\", tw[\"user\"][\"username\"])\n",
+    "    print(\"Texto:\", tw[\"rawContent\"])\n",
+    "else:\n",
+    "    print(\"No se encontró ningún retweet\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48f05299",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
